--- a/GitTest Solution/ExtensionSettings/git/Settings.json
+++ b/GitTest Solution/ExtensionSettings/git/Settings.json
@@ -1,5 +1,5 @@
 ﻿{
 	"serverType": "github",
-	"gitURL": "https://github.com/kebukawa",
-	"gitIsPrivateRepository": "false"
+	"gitURL": "https://github.com/Kebukawa",
+	"gitIsPrivateRepository": "true"
 }
